fixing add tag waterfall problem
Former-commit-id: 5545372d0fed54081168f5ea4ae675807120f4fa [formerly 29664eae4b2a1ad725f647ee04d31e3866c834c1] [formerly 91cefdd4bc85141eba8efef65fbf641d1790a687 [formerly da77bab9eaad1239552df8d76bb4ec9ef1713c04]]
Former-commit-id: 49663118aede2ddfa0206598c7fb2a1d41a09dc8 [formerly 154bce9abf5c427d097767776221a3ef4da26ca1]
Former-commit-id: 41ed549e0341c37f647e83b1e5a7435a2e8c7a23

--- a/templates/activities/all_tasks.html
+++ b/templates/activities/all_tasks.html
@@ -87,14 +87,14 @@
                           <div class="row tasksList">
                             <div class="col-md-12">
                                 <ul class="list-group">
-                                  <li ng-class="{hidden: !isBlankState(tasks)}" class="task-actions taskCard list-group-item task-actions">
+                                  <li ng-hide="tasks" class="task-actions taskCard list-group-item task-actions">
                                        <div class="row">
                                        <div class="col-md-12">
                                              <p class="taskNoresult">{{ _('No results found') }}</p>
                                         </div>
                                       </div>
                                     </li>
-                                    <li class="task-actions taskCard list-group-item task-actions">
+                                    <li ng-show="tasks" class="task-actions taskCard list-group-item task-actions">
                                      <div class="row">
                                      <div class="col-md-12">
                                        <form id="task_actions" class="form-inline" role="form">
@@ -172,14 +172,14 @@
                           <div class="row tasksList">
                             <div class="col-md-12">
                                 <ul class="list-group">
-                                    <li ng-class="{hidden: !isBlankState(tasks)}" class="task-actions taskCard list-group-item task-actions">
+                                    <li ng-hide="tasks" class="task-actions taskCard list-group-item task-actions">
                                        <div class="row">
                                        <div class="col-md-12">
                                              <p class="taskNoresult">{{ _('No results found') }}</p>
                                         </div>
                                       </div>
                                     </li>
-                                    <li ng-class="{hidden: isBlankState(tasks)}" class="task-actions taskCard list-group-item task-actions">
+                                    <li ng-show="tasks" class="task-actions taskCard list-group-item task-actions">
                                      <div class="row">
                                      <div class="col-md-12">
                                        <form id="task_actions" class="form-inline" role="form">
@@ -257,14 +257,14 @@
                             <div class="row tasksList">
                             <div class="col-md-12">
                                 <ul class="list-group">
-                                  <li ng-class="{hidden: !isBlankState(tasks)}" class="task-actions taskCard list-group-item task-actions">
+                                  <li ng-hide="tasks" class="task-actions taskCard list-group-item task-actions">
                                        <div class="row">
                                        <div class="col-md-12">
                                              <p class="taskNoresult">{{ _('No results found') }}</p>
                                         </div>
                                       </div>
                                     </li>
-                                    <li class="task-actions taskCard list-group-item task-actions">
+                                    <li ng-show="tasks"  class="task-actions taskCard list-group-item task-actions">
                                      <div class="row">
                                      <div class="col-md-12">
                                        <form id="task_actions" class="form-inline" role="form">
@@ -342,14 +342,14 @@
                             <div class="row tasksList">
                             <div class="col-md-12">
                                 <ul class="list-group">
-                                   <li ng-class="{hidden: !isBlankState(tasks)}" class="task-actions taskCard list-group-item task-actions">
+                                   <li ng-hide="tasks" class="task-actions taskCard list-group-item task-actions">
                                        <div class="row">
                                        <div class="col-md-12">
                                              <p class="taskNoresult">{{ _('No results found') }}</p>
                                         </div>
                                       </div>
                                     </li>
-                                    <li class="task-actions taskCard list-group-item task-actions">
+                                    <li ng-show="tasks"  class="task-actions taskCard list-group-item task-actions">
                                      <div class="row">
                                      <div class="col-md-12">
                                        <form id="task_actions" class="form-inline" role="form">
@@ -427,14 +427,14 @@
                             <div class="row tasksList">
                             <div class="col-md-12">
                                 <ul class="list-group">
-                                   <li ng-class="{hidden: !isBlankState(tasks)}" class="task-actions taskCard list-group-item task-actions">
+                                   <li ng-hide="tasks" class="task-actions taskCard list-group-item task-actions">
                                        <div class="row">
                                        <div class="col-md-12">
                                              <p class="taskNoresult">{{ _('No results found') }}</p>
                                         </div>
                                       </div>
                                     </li>
-                                    <li class="task-actions taskCard list-group-item task-actions">
+                                    <li ng-show="tasks"  class="task-actions taskCard list-group-item task-actions">
                                      <div class="row">
                                      <div class="col-md-12">
                                        <form id="task_actions" class="form-inline" role="form">
