--- a/templates/cases/case_list.html
+++ b/templates/cases/case_list.html
@@ -1,33 +1,41 @@
 <div class="row subHeader">
-  <div class="subHContent">
     <div class="currentApp">
-     <h2 class="page-title">
-      <!-- <img class="platform_icons" height="25" width="25" src="static/img/admin_console.png"> -->
-      {{active_app.label}}
-    </h2>
-    <div class="filterOptions">
-        <span role="button" class="filterItem activeFilter" ng-click="filterByOwner();selectedOption ='all'" ng-class="{activeFilter: selectedOption =='all'}">All <span class="hidden-xs hiddenOnxs">Cases</span> </span>
-        <span role="button" class="filterItem" ng-class="{activeFilter: selectedOption =='my'}" ng-click="filterByOwner('{{ME}}');selectedOption ='my'">My <span class="hidden-xs hiddenOnxs">Cases</span></span>
-        <div class="btn-group">
-            <a class="filterItem" href="#" data-toggle="dropdown"  ng-class="{activeFilter: selectedOption =='sort'}" >
-              Sort by
-              <i class="icon-angle-down"></i>
-            </a>
-            <ul class="dropdown-menu">
-          <li><a  ng-click="orderBy('-updated_at')" href="#" data-toggle="modal">{{ _('Last modified') }}</a></li>
-          <li><a ng-click="orderBy('name')" href="#" data-toggle="modal">{{ _('Name') }}</a></li>
-          <!--li><a ng-click="orderBy('-priority')" href="#" data-toggle="modal">{{ _('Priority') }}</a></li-->
-          <li><a ng-click="orderBy('status')" href="#" data-toggle="modal">{{ _('Status') }}</a></li>
-          <!--li><a ng-click="orderBy('contact_name')" href="#" data-toggle="modal">{{ _('Contact') }}</a></li>
-          <li><a ng-click="orderBy('casee_name')" href="#" data-toggle="modal">{{ _('Company') }}</a></li-->
-            </ul>
+       <h2 class="page-title">
+       {{active_app.label}}
+       <!--  <img class="platform_icons" height="25" width="25" src="static/img/admin_console.png"> -->
+      </h2>
+    </div> 
+    <div class=" subHeaderContent">
+      <div class="col-md-9">
+      <div class="row">
+      <div class="col-md-10 col-xs-10">
+      <div class="filterOptions">
+          <span role="button" class="filterItem activeFilter" ng-click="filterByOwner();selectedOption ='all'" ng-class="{activeFilter: selectedOption =='all'}">All <span class="hidden-xs hiddenOnxs">Cases</span> </span>
+          <span role="button" class="filterItem" ng-class="{activeFilter: selectedOption =='my'}" ng-click="filterByOwner('{{ME}}');selectedOption ='my'">My <span class="hidden-xs hiddenOnxs">Cases</span></span>
+          <div class="btn-group">
+              <a class="filterItem" href="#" data-toggle="dropdown"  ng-class="{activeFilter: selectedOption =='sort'}" >
+                Sort by
+                <i class="icon-angle-down"></i>
+              </a>
+              <ul class="dropdown-menu">
+            <li><a  ng-click="orderBy('-updated_at')" href="#" data-toggle="modal">{{ _('Last modified') }}</a></li>
+            <li><a ng-click="orderBy('name')" href="#" data-toggle="modal">{{ _('Name') }}</a></li>
+            <!--li><a ng-click="orderBy('-priority')" href="#" data-toggle="modal">{{ _('Priority') }}</a></li-->
+            <li><a ng-click="orderBy('status')" href="#" data-toggle="modal">{{ _('Status') }}</a></li>
+            <!--li><a ng-click="orderBy('contact_name')" href="#" data-toggle="modal">{{ _('Contact') }}</a></li>
+            <li><a ng-click="orderBy('casee_name')" href="#" data-toggle="modal">{{ _('Company') }}</a></li-->
+              </ul>
+        </div>
+        </div>
       </div>
-        <a href="/#/cases/new" class="btn red afterScrollBtn hidden">
+      <div class="col-md-2 col-xs-2">
+      <a href="/#/cases/new" class="btn red newAccountBtnOnscroll pull-right hidden afterScrollBtn">
            New <span class="hidden-xs hiddenOnxs">Case</span> 
          </a>
       </div>
-     </div>
-  </div>
+      </div>
+    </div>
+    </div>
 </div>
 <div  class="page-content">
   <div class="loader-container row" ng-show="isLoading">
@@ -109,6 +117,14 @@
                       <span class="pull-right" style="color:<%=getStatusColor(casee.current_status.name)%>"><%= casee.current_status.name %></span>  
                         </p>
                   </div>
+                <div class="tagsSection " ng-class="{hidden: casee.tags==null}">
+                  <div class="">
+                    <div class="sectionContent">
+                      <a ng-repeat="tag in casee.tags" href="/#/search/type:casee tags:<%=tag.id%>"> <span class=" task-label task-tag badge ng-scope ng-binding" style="background-color: <%=tag.color%>;color:<%=idealTextColor(tag.color)%>;">  <%= tag.name %></span>
+                      </a>
+                    </div>
+                    </div>
+                  </div>
                   </div>
                 </div>
 
@@ -117,14 +133,6 @@
               <div class="clearfix"></div>
             </div>
             </div>
-          <div class="tagsSection " ng-class="{hidden: casee.tags==null}">
-          <div class="col-md-12">
-            <div class="sectionContent">
-              <a ng-repeat="tag in casee.tags" href="/#/search/type:casee tags:<%=tag.id%>"> <span class=" task-label task-tag badge ng-scope ng-binding" style="background-color: <%=tag.color%>;color:<%=idealTextColor(tag.color)%>;">  <%= tag.name %></span>
-              </a>
-            </div>
-            </div>
-          </div>
             <div class="clearfix"></div>
         </div>
         </div>
