--- a/templates/base.html
+++ b/templates/base.html
@@ -454,6 +454,8 @@
   <script src="static/plugins/respond.min.js"></script>
   <![endif]-->
   <script src="static/bootstrap3/plugins/jquery-slimscroll/jquery.slimscroll.min.js" type="text/javascript"></script>
+  <script src="static/bootstrap3/plugins/moment/moment.min.js"></script>
+  <script src="static/bootstrap3/plugins/moment/angular.moment.js"></script>
   <script src="static/bootstrap3/plugins/jquery.blockui.min.js" type="text/javascript"></script>
   <script src="static/bootstrap3/plugins/jquery.cokie.min.js" type="text/javascript"></script>
   <script src="static/bootstrap3/plugins/uniform/jquery.uniform.min.js" type="text/javascript"></script>
