--- a/templates/leads/lead_list.html
+++ b/templates/leads/lead_list.html
@@ -1,33 +1,41 @@
 <div class="row subHeader">
-  <div class="subHContent">
     <div class="currentApp">
-     <h2 class="page-title">
-    <!-- <img class="platform_icons" height="25" width="25" src="static/img/admin_console.png"> -->
-      {{active_app.label}}
-    </h2>
-    <div class="filterOptions">
-        <span role="button" class="filterItem activeFilter" ng-click="filterByOwner();selectedOption ='all'" ng-class="{activeFilter: selectedOption =='all'}">All <span class="hidden-xs hiddenOnxs">Leads</span> </span>
-        <span role="button" class="filterItem" ng-class="{activeFilter: selectedOption =='my'}" ng-click="filterByOwner('{{ME}}');selectedOption ='my'">My <span class="hidden-xs hiddenOnxs">Leads</span></span>
-        <div class="btn-group">
-            <a class="filterItem" href="#" data-toggle="dropdown"  ng-class="{activeFilter: selectedOption =='sort'}" >
-              Sort by
-              <i class="icon-angle-down"></i>
-            </a>
-            <ul class="dropdown-menu">
-          <li><a  ng-click="orderBy('-updated_at')" href="#" data-toggle="modal">{{ _('Last modified') }}</a></li>
-          <li><a ng-click="orderBy('firstname')" href="#" data-toggle="modal">{{ _('First Name') }}</a></li>
-          <li><a ng-click="orderBy('lastname')" href="#" data-toggle="modal">{{ _('Last Name') }}</a></li>
-          <!--li><a ng-click="orderBy('title')" href="#" data-toggle="modal">{{ _('Title') }}</a></li-->
-          <!--li><a ng-click="orderBy('company')" href="#" data-toggle="modal">{{ _('Company') }}</a></li-->
-          <li><a ng-click="orderBy('status')" href="#" data-toggle="modal">{{ _('Status') }}</a></li>
-            </ul>
+       <h2 class="page-title">
+       {{active_app.label}}
+       <!--  <img class="platform_icons" height="25" width="25" src="static/img/admin_console.png"> -->
+      </h2>
+    </div> 
+    <div class=" subHeaderContent">
+      <div class="col-md-9">
+      <div class="row">
+      <div class="col-md-10 col-xs-10">
+      <div class="filterOptions">
+          <span role="button" class="filterItem activeFilter" ng-click="filterByOwner();selectedOption ='all'" ng-class="{activeFilter: selectedOption =='all'}">All <span class="hidden-xs hiddenOnxs">Leads</span> </span>
+          <span role="button" class="filterItem" ng-class="{activeFilter: selectedOption =='my'}" ng-click="filterByOwner('{{ME}}');selectedOption ='my'">My <span class="hidden-xs hiddenOnxs">Leads</span></span>
+          <div class="btn-group">
+              <a class="filterItem" href="#" data-toggle="dropdown"  ng-class="{activeFilter: selectedOption =='sort'}" >
+                Sort by
+                <i class="icon-angle-down"></i>
+              </a>
+              <ul class="dropdown-menu">
+            <li><a  ng-click="orderBy('-updated_at')" href="#" data-toggle="modal">{{ _('Last modified') }}</a></li>
+            <li><a ng-click="orderBy('firstname')" href="#" data-toggle="modal">{{ _('First Name') }}</a></li>
+            <li><a ng-click="orderBy('lastname')" href="#" data-toggle="modal">{{ _('Last Name') }}</a></li>
+            <!--li><a ng-click="orderBy('title')" href="#" data-toggle="modal">{{ _('Title') }}</a></li-->
+            <!--li><a ng-click="orderBy('company')" href="#" data-toggle="modal">{{ _('Company') }}</a></li-->
+            <li><a ng-click="orderBy('status')" href="#" data-toggle="modal">{{ _('Status') }}</a></li>
+              </ul>
+        </div>
+        </div>
       </div>
-        <a href="/#/contacts/new" class="btn red afterScrollBtn hidden">
+      <div class="col-md-2 col-xs-2">
+      <a href="/#/leads/new" class="btn red newAccountBtnOnscroll pull-right hidden afterScrollBtn">
            New <span class="hidden-xs hiddenOnxs">Lead</span> 
          </a>
       </div>
+      </div>
     </div>
-  </div>
+    </div>
 </div>
 <div  class="page-content">
   <div class="loader-container row" ng-show="isLoading">
@@ -93,8 +101,8 @@
                   </a>
                 </div>
                 <div class="pitch">
-                  <span  class="contact-title" >
-                    Updated at:  <%=lead.updated_at | date:'yyyy-MM-dd - HH:mm:ss ' %>
+                  <span   am-time-ago="lead.updated_at" class="contact-title" >
+                    
                   </span>
                   <span ng-show="lead.status" class="contact-title" >
                     Status:
