before pull from iogrow
Former-commit-id: 4a480102eb059634add8f705fe3147747de893e7 [formerly 8af3ee6c8333dd339ff30f4c9c3970177dc6800b] [formerly d6abbc895c95cc0e62a6e849dd5666280c8b6b41 [formerly 82f755114a76a8f625deb23cb9904beac87470e9]]
Former-commit-id: 6ffd3eb311740185adea5947ef2f8b8580991dd6 [formerly 3b87a974d260994c63a356be0c3c301a1664a0ea]
Former-commit-id: 4fef889cb50a91c58a27e25a92e281c4d5645e8d

--- a/templates/accounts/account_list.html
+++ b/templates/accounts/account_list.html
@@ -46,6 +46,11 @@
       </div>
 
 </div>
+<div class="dropOut"  ng-show="showUntag" >
+    <div class="trash">
+      <img alt="delete tag" droppable ng-drop="dropOutTag(account,$index)" class="" src="/static/img/iotrash.png" >
+    </div>
+</div>
 <!-- END SAMPLE PORTLET CONFIGURATION MODAL FORM-->
 <!-- BEGIN PAGE CONTAINER-->
 <div ng-show="immediateFailed">
@@ -170,7 +175,7 @@
             </div>
             <div class="tagsSection" ng-class="{hidden: account.tags==null}">
               <div class="sectionContent">
-                <a ng-repeat="tag in account.tags" href="/#/search/type:Account tags:<%=tag.id%>"> <span class="pull-right task-label task-tag badge ng-scope ng-binding" style="background-color: <%=tag.color%>;color:<%=idealTextColor(tag.color)%>;">  <%= tag.name %></span>
+                <a ng-repeat="tag in account.tags" href="/#/search/type:Account tags:<%=tag.id%>"> <span draggable  ng-drag="dragTagItem(account.tags,$index)" class="pull-right task-label task-tag badge ng-scope ng-binding" style="background-color: <%=tag.color%>;color:<%=idealTextColor(tag.color)%>;">  <%= tag.name %></span>
                 </a>
               </div>
             </div>
