--- a/templates/cases/case_list.html
+++ b/templates/cases/case_list.html
@@ -45,6 +45,7 @@
         </div>
       </div>
   </div>
+  <div class="dropOut"></div>
       <!-- END SAMPLE PORTLET CONFIGURATION MODAL FORM-->
       <!-- BEGIN PAGE CONTAINER-->
   <div class="container-fluid"ng-show="immediateFailed">
