--- a/templates/contacts/contact_new.html
+++ b/templates/contacts/contact_new.html
@@ -93,7 +93,7 @@
                   <div class="col-md-6">
                     <div class="form-group">
                       <div class="col-md-12">
-                        <input type="text"  ng-model="searchAccountQuery" typeahead="result as result.name  for result in accountsResults | filter:$viewValue | limitTo:10" typeahead-on-select="selectAccount()" class="form-control"placeholder="Account">
+                        <input type="text"  ng-model="searchAccountQuery" typeahead="result as result.name  for result in accountsResults | filter:$viewValue | limitTo:10" typeahead-on-select="selectAccount()" class="form-control"placeholder="Company">
                       </div>
                     </div>
                   </div>
