--- a/templates/admin/users/list.html
+++ b/templates/admin/users/list.html
@@ -6,9 +6,9 @@
     </h2>
   </div>
   <div class=" subHeaderContent">
-    <div class="pull-right sharebuttonDiv" ng-show="!blankStateaccount"> 
-      
-      
+    <div class="pull-right sharebuttonDiv" ng-show="!blankStateaccount">
+
+
     </div>
     <h2 class="page-title">{{ _("Users") }} </h2>
   </div>
@@ -20,11 +20,11 @@
             Loading...
           </div>
         </div>
-        
+
   </div>
   <div ng-show="immediateFailed">
-    <div class="col-md-12">  
-       
+    <div class="col-md-12">
+
       <span id="signin">
         <span id="myGsignin"></span>
       </span>
@@ -33,7 +33,7 @@
   <div class="row" ng-show="isSignedIn">
     <div class="col-md-9">
       <button  ng-click="showModal()" id="sample_editable_1_new" class="btn red newBtn">
-        {{ _("New User") }} 
+        {{ _("New User") }}
       </button>
     </div>
     <div class="col-md-9">
@@ -46,7 +46,7 @@
               <div class="head">
                 <div class="pic">
                   <a href="<%= user.google_public_profile_url %>" class="startup-link" title="user.google_display_name">
-                    <img ng-show="user.google_public_profile_photo_url" class="google-avatar" ng-src="<%= user.google_public_profile_photo_url %>">
+                    <img ng-show="user.google_public_profile_photo_url" class="img-responsive profile-photo" ng-src="<%= user.google_public_profile_photo_url %>">
                   </a>
                 </div>
                 <div class="text">
@@ -64,7 +64,33 @@
                       status: <%= user.status %>
                     </span>
 
-                    
+
+                  </div>
+                </div>
+                <div class="clearfix"></div>
+              </div>
+            </div>
+          </div>
+          <div ng-repeat="invitee in invitees" ng-class="{rightcards: getPosition($index)==4}" droppable data-column="<%=getPosition($index)%>" id="card_<%=$index%>"class="cardElement" ng-drop="dropTag(contact,$index)">
+            <div class="detailsSection">
+              <div class="head">
+                <div class="pic">
+                  <a href="<%= user.google_public_profile_url %>" class="startup-link" title="<%= invitee.invited_mail %>">
+                    <img ng-src="/static/img/avatar_2x.png" class="img-responsive profile-photo">
+                  </a>
+                </div>
+                <div class="text">
+
+                  <div class="pitch">
+                    <span>
+                      <%= invitee.invited_mail %>
+                    </span>
+                    <br>
+                    <span>
+                      invited by <%= invitee.invited_by %> at <%= invitee.updated_at %>
+                    </span>
+
+
                   </div>
                 </div>
                 <div class="clearfix"></div>
@@ -80,27 +106,27 @@
 <div id="addAccountModal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
               <div class="modal-dialog">
    <div class="modal-content">
-      <div class="modal-header">          
+      <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
                 <h3 id="myModalLabel" class="modal-title">{{_("New User")}}</h3>
               </div>
               <div class="modal-body">
-                 <form id="addAccount" name="addaccount"  class="form-horizontal"> 
-                 
-                  
+                 <form id="addAccount" name="addaccount"  class="form-horizontal">
+
+
                     <p>Invite people from your team and start working together in seconds. Everyone you invite will receive a welcome email.</p>
 
-                    <div class="form-group">       
+                    <div class="form-group">
                         <label  class="required col-md-3 control-label">{{_("Email")}} *</label>
-                       
-                        <div class="col-md-9">     
+
+                        <div class="col-md-9">
                           <input class="form-control" type="email" required id="id_name" ng-model="user.email">
-                          
+
                         </div>
                     </div>
-                    
-                    
-                
+
+
+
               </div>
               <div class="modal-footer">
                 <button class="btn" data-dismiss="modal" aria-hidden="true">{{_("Cancel")}}</button>
@@ -133,8 +159,8 @@
         }
     }
     handleUniform();
-   $('.waterfall').waterfall({ 
-        colMinWidth: 210, 
+   $('.waterfall').waterfall({
+        colMinWidth: 210,
         defaultContainerWidth: 800,
         autoresize: true
   });
