Detach tag on Account List
Former-commit-id: 1e95d94a26c2f7ec81a479439ab0a04aa275de4a [formerly d14f40e962a52b9899a8ad1927d966fc0586ddd6] [formerly cc7539c5ac5bb9a55fc151f2223dc2d1739adb4d [formerly 5cb1c329cb7bc129adb76bb3f58d4a821fd4c874]]
Former-commit-id: d874ad258d0b9f436fb011248a29fbab5385d7c8 [formerly 716f6de5ee79505d2dca5500d89bb129c4cd5fca]
Former-commit-id: 3c419baa23978c4501281ce9b575b1c4198810cf

--- a/templates/base.html
+++ b/templates/base.html
@@ -409,6 +409,7 @@
   <script src="static/app/scripts/services/noteservices.js" ></script>
   <script src="static/app/scripts/services/commentservices.js" ></script>
    <script src="static/app/scripts/services/settingservices.js" ></script>
+   
 
 
   <script src="static/app/scripts/app.js" ></script>
@@ -426,6 +427,7 @@
   <script src="static/app/scripts/controllers/notecontrollers.js"></script>
   <script src="static/app/scripts/controllers/taskcontrollers.js"></script>
   <script src="static/app/scripts/controllers/eventcontrollers.js"></script>
+  <script src="static/app/scripts/services/edgeservices.js" ></script>
   <!--Admin controllers-->
   <script src="static/app/scripts/controllers/usercontrollers.js" ></script>
   <script src="static/app/scripts/controllers/groupcontrollers.js" ></script>
