--- a/templates/sign-in.html
+++ b/templates/sign-in.html
@@ -1073,7 +1073,7 @@ function onSignInCallback(authResult) {
   <div class="wrapper">
   <div class="google-header-bar  centered">
   <div class="header content clearfix">
-  <img alt="Google" class="logo" src="/static/img/iogrow_logo.png">
+  <img alt="Google" class="logo" src="http://storage.googleapis.com/iogrow-gs/static/img/ioGrow_welcome_logo.png">
   </div>
   </div>
   <div class="main content clearfix">
