--- a/templates/sign-up.html
+++ b/templates/sign-up.html
@@ -246,7 +246,7 @@
   .header .logo {
   margin: 17px 0 0;
   float: left;
- 
+
   }
   .header .secondary-link {
   margin: 28px 0 0;
@@ -1002,7 +1002,7 @@ var helper = (function() {
       $.ajax({
         type: 'POST',
         url: '/gconnect',
-        
+
         success: function(result) {
           console.log('i am in connectServer show me result please');
           console.log(result);
@@ -1014,8 +1014,8 @@ var helper = (function() {
           }
          // helper.people();
         },
-        
-        
+
+
 
         data: {code:this.authResult.code, id: userId}
       });
@@ -1073,7 +1073,7 @@ function onSignInCallback(authResult) {
   <div class="wrapper">
   <div class="google-header-bar  centered">
   <div class="header content clearfix">
-  <img alt="Google" class="logo" src="/static/img/iogrow_logo.png">
+  <img alt="Google" class="logo" src="http://storage.googleapis.com/iogrow-gs/static/img/ioGrow_welcome_logo.png">
   </div>
   </div>
   <div class="main content clearfix">
@@ -1090,17 +1090,17 @@ function onSignInCallback(authResult) {
 <img class="profile-img" src="{{userinfo.google_public_profile_photo_url}}" alt="">
 <p class="profile-name">{{ _("Hi") }} {{userinfo.google_display_name }}</p>
 <form class="sign-up-form" action="" method="POST">
-                          
+
                           <input required autofocus type="text" name="org_name" placeholder="Type here your company name" >
-                          
-                         
+
+
                           <input id="signIn" name="signIn" class="rc-button rc-button-submit" type="submit" value="Next step">
 
                         </form>
 </div>
 <div class="one-google">
   <p class="create-account">
-  
+
   <a href="http://www.google.com/support/accounts?hl=en" target="_blank">
   Need help?
   </a>
@@ -1130,16 +1130,12 @@ function onSignInCallback(authResult) {
   </li>
   </ul>
   <div id="lang-vis-control" style="display: inline;">
-  
+
   </div>
   </div>
 </div>
   </div>
 
-  
+
 
 </body></html>
-
-
-
-
