--- a/static/welcome/css/style.css
+++ b/static/welcome/css/style.css
@@ -367,7 +367,8 @@ a:after {
 #headerwrap h1 {
 	margin-top: 30px;
 	color: white;
-	font-size: 46px;
+	font-size: 39px;
+	font-weight:bold;
 }
 
 #headerwrap h3 {
