--- a/templates/live/welcome.html
+++ b/templates/live/welcome.html
@@ -110,9 +110,24 @@
 
 
   <style type="text/css">
+    .white-link{
+      color:white;
+      font-weight:bold;
+      font-size:14px;
+    }
     #customBtn {
       display: inline-block;
-      background: #4D90FE;
+      background: #dd4b39;
+      color: white;
+      width: 300px;
+      border-radius: 5px;
+      white-space: nowrap;
+      padding-top:5px;
+      padding-bottom:5px;
+    }
+    #customBtn a{
+      display: inline-block;
+      background: #dd4b39;
       color: white;
       width: 300px;
       border-radius: 5px;
@@ -121,7 +136,7 @@
       padding-bottom:5px;
     }
     #customBtn:hover {
-      background: #4D90FE;
+      background: #dd4b39;
       cursor: hand;
     }
 
@@ -134,7 +149,7 @@
       vertical-align: middle;
       width: 35px;
       height: 35px;
-      border-right: #4D90FE 1px solid;
+      border-right: #dd4b39 1px solid;
     }
     span.buttonText {
       display: inline-block;
@@ -203,8 +218,9 @@
 
                            <div id="gSignInWrapper">
     <div id="customBtn" class="customGPlusSignIn">
+      <a href="/early-bird" >
       <span class="icon"></span>
-      <span class="buttonText">Start using ioGrow for free!</span>
+      <span class="buttonText">Start using ioGrow for free!</span></a>
     </div>
   </div>
                         <!-- <span id="signinButton">
@@ -349,16 +365,14 @@
             <div class="container">
                 <div class="row text-center">
                     <div class="col-lg-12">
-                        <h1>CRM for Startups... <b>That just works</b></h1>
-                        <h3><b>Seamlessly integrated with Gmail</b></h3>
+                        <h1>Grow and Manage your relationships with the right people!</b></h1>
+                        <h3><b>The next generation of Google Contacts</b></h3>
                         <br>
                     </div>
 
 
                     <div class="col-lg-2 hidden-xs hidden-sm hidden-md">
-                        <h5>Automate business processes</h5>
-                        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
-                        <img src="/static/welcome/img/arrow-left.png" alt="">
+
                     </div>
 
                     <div class="col-lg-8">
@@ -367,10 +381,7 @@
                         <a href="#features" type="submit" class="btn btn-lg btn-theme smoothScroll">LEARN MORE</a>-->
                     </div>
                     <div class="col-lg-2 hidden-xs hidden-sm hidden-md">
-                        <br>
-                        <img class="pad-top" src="/static/welcome/img/arrow-right.png" alt="">
-                        <h5>Collaborate in the cloud</h5>
-                        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+
                     </div>
                 </div>
             </div> <!-- /container -->
@@ -554,204 +565,24 @@ A clean, simple interface that collect all your customer's data, can dramaticall
 
 
 
-        <!-- Divider 1 Section -->
-        <div id="divider01">
-            <div class="container">
-                <div class="row text-center">
-                    <div id="carousel-example-generic" class="carousel slide">
-                        <!-- Wrapper for slides -->
-                        <div class="carousel-inner">
-                            <div class="item active">
-                                <h3>"Working with Bootstack was amazing. Their team is incredible."</h3>
-                                <h4>John Doe, <em>A Company</em></h4>
-                            </div>
-                            <div class="item">
-                                <h3>"Bootstack has helped my team build amazing products. Amazing team."</h3>
-                                <h4>Jane Doe, <em>A Company</em></h4>
-                            </div>
-                        </div><!-- /carousel-inner -->
-                        <br>
-                        <br>
-                        <br>
-                        <!-- Indicators - Uncomment for indicators to show
-                        <ol class="carousel-indicators">
-                            <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
-                            <li data-target="#carousel-example-generic" data-slide-to="1"></li>
-                        </ol> -->
-                    </div><!-- /carousel-example -->
-                </div><!-- /row -->
-            </div><!-- /container -->
-        </div><!-- /divider01 -->
-
 
         <!-- Pricing Section -->
         <section id="pricing" name="pricing"></section>
         <div id="pricingwrap">
             <div class="container text-center">
-                <br>
-                <h2>Our Pricing Options</h2>
-                <hr><br><br>
                 <div class="row">
-                    <div class="col-xs-12 col-md-3">
-                        <div class="panel panel-custom">
-                            <div class="panel-heading">
-                                <h3 class="panel-title">Starter</h3>
-                            </div>
-                            <div class="panel-body">
-                                <div class="the-price">
-                                    <h2>$9<span class="subscript">/mo</span></h2>
-                                    <small>1 month FREE Trial</small>
-                                </div>
-                                <table class="table">
-                                    <tr>
-                                        <td>1 Account</td>
-                                    </tr>
-                                    <tr>
-                                        <td>1 Project</td>
-                                    </tr>
-                                    <tr>
-                                        <td>50K API Access</td>
-                                    </tr>
-                                    <tr>
-                                        <td>100MB Storage</td>
-                                    </tr>
-                                    <tr>
-                                        <td>Custom Cloud Services</td>
-                                    </tr>
-                                    <tr>
-                                        <td>Weekly Reports</td>
-                                    </tr>
-                                </table>
-                            </div>
-                            <div class="panel-footer">
-                                <a href="#" class="btn btn-theme" role="button">Sign Up</a>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="col-xs-12 col-md-3">
-                        <div class="panel panel-custom">
-                            <div class="panel-heading">
-                                <h3 class="panel-title">Standard</h3>
-                            </div>
-                            <div class="panel-body">
-                                <div class="the-price">
-                                    <h2>$19<span class="subscript">/mo</span></h2>
-                                    <small>1 month FREE Trial</small>
-                                </div>
-                                <table class="table">
-                                    <tr>
-                                        <td>2 Accounts</td>
-                                    </tr>
-                                    <tr>
-                                        <td>5 Projects</td>
-                                    </tr>
-                                    <tr>
-                                        <td>100K API Access</td>
-                                    </tr>
-                                    <tr>
-                                        <td>200MB Storage</td>
-                                    </tr>
-                                    <tr>
-                                        <td>Custom Cloud Services</td>
-                                    </tr>
-                                    <tr>
-                                        <td>Weekly Reports</td>
-                                    </tr>
-                                </table>
-                            </div>
-                            <div class="panel-footer">
-                                <a href="#" class="btn btn-theme" role="button">Sign Up</a>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="col-xs-12 col-md-3">
-                        <div class="panel panel-custom">
-                            <div class="panel-heading">
-                                <h3 class="panel-title">Premium</h3>
-                            </div>
-                            <div class="panel-body">
-                            <div class="the-price">
-                                <h2>$39<span class="subscript">/mo</span></h2>
-                                <small>1 month FREE Trial</small>
-                            </div>
-                            <table class="table">
-                                <tr>
-                                    <td>5 Accounts</td>
-                                </tr>
-                                <tr>
-                                    <td>20 Projects</td>
-                                </tr>
-                                <tr>
-                                    <td>300K API Access</td>
-                                </tr>
-                                <tr>
-                                    <td>500MB Storage</td>
-                                </tr>
-                                <tr>
-                                    <td>Custom Cloud Services</td>
-                                </tr>
-                                <tr>
-                                    <td>Weekly Reports</td>
-                                </tr>
-                            </table>
-                            </div>
-                            <div class="panel-footer">
-                                <a href="#" class="btn btn-theme" role="button">Sign Up</a>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="col-xs-12 col-md-3">
-                        <div class="panel panel-custom">
-                            <div class="panel-heading">
-                                <h3 class="panel-title">Enterprise</h3>
-                            </div>
-                            <div class="panel-body">
-                                <div class="the-price">
-                                    <h2>$59<span class="subscript">/mo</span></h2>
-                                    <small>1 month FREE Trial</small>
-                                </div>
-                                <table class="table">
-                                    <tr>
-                                        <td>10 Accounts</td>
-                                    </tr>
-                                    <tr>
-                                        <td>50 Projects</td>
-                                    </tr>
-                                    <tr>
-                                        <td>500K API Access</td>
-                                    </tr>
-                                    <tr>
-                                        <td>1GB Storage</td>
-                                    </tr>
-                                    <tr>
-                                        <td>Custom Cloud Services</td>
-                                    </tr>
-                                    <tr>
-                                        <td>Weekly Reports</td>
-                                    </tr>
-                                </table>
-                            </div>
-                            <div class="panel-footer">
-                                <a href="#" class="btn btn-theme" role="button">Sign Up</a>
-                            </div>
+                    <br>
+                    <br>
+                    <div class="col-xs-12">
+                        <div id="customBtn" class="customGPlusSignIn">
+                          <a href="/early-bird" >
+                          <span class="icon"></span>
+                          <span class="buttonText"><b>Start Now. It's free!</b></span></a>
                         </div>
                     </div>
                 </div><!-- /row -->
             </div><!-- /container -->
         </div><!-- /pricingwrap -->
-
-
-        <!-- Divider 2 Section -->
-        <div id="divider02">
-            <div class="container text-center">
-                <h3>Start your 30-day free trial today.</h3>
-                <a href="#" type="button" class="btn btn-lg btn-theme2">Get Started</a>
-            </div>
-        </div><!-- /divider02 -->
-
 
         <!-- Footer Wrap -->
         <section id="contact" name="contact"></section>
@@ -761,9 +592,8 @@ A clean, simple interface that collect all your customer's data, can dramaticall
                     <div class="col-lg-4">
                         <h3>Contact Us</h3>
                         <br>
-                        <p><i class="fa fa-map-marker"></i> Some Address 373, Palo Alto, CA <br/>
-                            <i class="fa fa-phone"></i> (800) 373-7733 <br/>
-                            <i class="fa fa-envelope-o"></i> <a href="mailto:support@bootstacktheme.com">support@bootstacktheme.com</a>
+                        <p>
+                            <i class="fa fa-envelope-o"></i> <a href="mailto:email@iogrow.com" class="white-link">email@iogrow.com</a>
                         </p>
                     </div>
 
@@ -782,17 +612,7 @@ A clean, simple interface that collect all your customer's data, can dramaticall
                         </div>
                     </div>
 
-                    <div class="col-lg-4">
-                        <h3>Newsletter</h3>
-                        <br>
-                        <p>Subscribe to our newsletter and be the first to know our latest updates.</p>
-                        <div class="form-inline">
-                            <input id="email" type="text" class="form-control" placeholder="Your email" style="
-    width: 260px;
-">
-                            <button id="subscribe" class="btn btn-theme" type="button">Subscribe</button>
-                        </div>
-                    </div>
+
                 </div><!-- /row -->
             </div><!-- /container -->
         </div><!-- /footerwrap -->
@@ -803,10 +623,10 @@ A clean, simple interface that collect all your customer's data, can dramaticall
             <div class="container">
                 <div class="row">
                     <div class="col-lg-10">
-                        <p>Copyright &copy;2014 Bootstack Theme. All Rights Reserved.</p>
+                        <p>Copyright &copy;2014 ioGrow. All Rights Reserved.</p>
                     </div>
                     <div class="col-lg-2">
-                        <p><a href="#">Terms</a> | <a href="#">Privacy</a> | <a href="#">Legal</a></p>
+                        <p><a href="#" class="white-link">Terms</a> | <a href="#" class="white-link">Privacy</a> | <a href="#" class="white-link">Legal</a></p>
                     </div>
                 </div><!-- /row -->
             </div><!-- /container -->
