--- a/templates/contacts/contact_list.html
+++ b/templates/contacts/contact_list.html
@@ -48,6 +48,11 @@
       </div>
     </div>
   </div>
+  <div class="dropOut"  ng-show="showUntag" >
+    <div class="trash">
+      <img alt="delete tag" droppable ng-drop="dropOutTag()" class="" src="/static/img/iotrash.png" >
+    </div>
+</div>
   <!-- END SAMPLE PORTLET CONFIGURATION MODAL FORM-->
   <!-- BEGIN PAGE CONTAINER-->
   <div ng-show="immediateFailed">
@@ -127,7 +132,7 @@
             <div class="tagsSection" ng-class="{hidden: contact.tags==null}">
               <div class="sectionContent">
                 <a ng-repeat="tag in contact.tags" href="/#/search/type:Contact tags:<%=tag.id%>">
-                  <span class="pull-right task-label task-tag badge ng-scope ng-binding" style="background-color: <%=tag.color%>;color:<%=idealTextColor(tag.color)%>;">
+                  <span draggable  ng-drag="dragTagItem(tag.edgeKey)" class="pull-right task-label task-tag badge ng-scope ng-binding" style="background-color: <%=tag.color%>;color:<%=idealTextColor(tag.color)%>;">
                     <%= tag.name %>
                   </span>
                 </a>
