detach edge on opportunity list page
Former-commit-id: 6b5ffe46d93e5d96167991a0669b0b6ec8c93709 [formerly 16d7e8d8a955498588b68c07d4102f6ba11d0aea] [formerly 55e86dc3af8bbbd49d8b0fd274463e8b68b4a0f5 [formerly 4c7c25b4ec2d9832512ee50b8fc650f378667d2d]]
Former-commit-id: 0034b8587c818959643730f8098b2cfba5bcc9d6 [formerly 4636c293cdcf9f19dbcefa96bcfe9f2464b00386]
Former-commit-id: ce941b17d79bbc4dede1fe0db81939a8c7102a43

--- a/templates/opportunities/opportunity_list.html
+++ b/templates/opportunities/opportunity_list.html
@@ -58,6 +58,11 @@
       </div>
     </div>
   </div>
+  <div class="dropOut"  ng-show="showUntag" >
+    <div class="trash">
+      <img alt="delete tag" droppable ng-drop="dropOutTag()" class="" src="/static/img/iotrash.png" >
+    </div>
+</div>
   <div class="container-fluid"ng-show="immediateFailed">
     <div class="col-md-12">
       <h1>Sign-in Button;</h1>
@@ -134,7 +139,7 @@
                     </div>
                   <div class="tagsSection" ng-class="{hidden: opportunity.tags==null}">
                       <div class="sectionContent">
-                           <a ng-repeat="tag in opportunity.tags" href="/#/search/type:opportunity tags:<%=tag.id%>"> <span class="pull-right task-label task-tag badge ng-scope ng-binding" style="background-color: <%=tag.color%>;color:<%=idealTextColor(tag.color)%>;">  <%= tag.name %></span>
+                           <a ng-repeat="tag in opportunity.tags" href="/#/search/type:opportunity tags:<%=tag.id%>"> <span draggable  ng-drag="dragTagItem(tag.edgeKey)" class="pull-right task-label task-tag badge ng-scope ng-binding" style="background-color: <%=tag.color%>;color:<%=idealTextColor(tag.color)%>;">  <%= tag.name %></span>
                            </a>
                       </div>
                   </div>
